--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     def room_version = "2.2.5"
+    def lifecycle_version = "2.5.0"
 
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.42'
@@ -66,19 +67,18 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.1'
 
-    // Retrofit
+    //Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    // Retrofit - retrofit & converter & adapter
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0"
 
-    // ViewModel
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0'
-
-    // LifecycleScope
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0'
-
-    // LiveData
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.5.0'
+    // Lifecycle - viewmodel & scope & livedata
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -95,8 +95,8 @@ dependencies {
     // Location
     implementation 'com.google.android.gms:play-services-location:17.0.0'
 
-    //Gson
-    implementation 'com.google.code.gson:gson:2.9.0'
+    // Swipe to Refresh
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 }
 
 kapt { correctErrorTypes = true }
